--- a/SWCsUtl/SWCsUtl.csproj
+++ b/SWCsUtl/SWCsUtl.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>preview</LangVersion>
+    <Authors>Vill. Snow</Authors>
+    <Product>SWCsUtl</Product>
+    <Copyright>Vill. Snow</Copyright>
+    <PackageLicenseExpression></PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/VillSnow/SWCsUtl</PackageProjectUrl>
+    <Description />
   </PropertyGroup>
 
 </Project>
