--- a/SWCsUtl/SWCsUtl.csproj
+++ b/SWCsUtl/SWCsUtl.csproj
@@ -9,6 +9,14 @@
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/VillSnow/SWCsUtl</PackageProjectUrl>
     <Description />
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
